# PMR

./: .gitignore  README.md  main.py  pyproject.toml
pmr/: __init__.py  chart_renderer.py  cli.py  config.py  detector.py  editor_cli.py  editor_engine.py  editor_payloads.py  editor_reporting.py  editor_xai.py  market_filters.py  models.py  packaging.py  pipeline.py  polymarket.py  providers.py  reporting.py  research_cli.py  research_engine.py  research_payloads.py  research_store.py  research_xai.py  sample_data.py  storage.py  story_groups.py  universe_selection.py
tests/: test_editor_layer.py  test_pipeline.py  test_polymarket.py  test_research_layer.py  test_storage.py  test_universe_selection.py
