[project]
name = "pmr"
version = "0.1.0"
description = "Prediction-market repricing monitor for news-intelligence workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xai-sdk>=1.10.0",
]

[project.scripts]
pmr = "pmr.cli:main"
pmr-research = "pmr.research_cli:main"
pmr-editor = "pmr.editor_cli:main"
